--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
 
 h1 {
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin: auto;
+    font-family:cursive Arial, Helvetica, sans-serif;
     font-style: italic;
 }
 
@@ -30,11 +29,11 @@ h1 {
 }
 
 .top-right {
-    border-bottom-right-radius: 100%;
-    background-color: purple;
+    border-top-right-radius: 100%;
+    background-color: red;
 }
 
 .top-left {
-    border-bottom-right-radius: 100%;
+    border-top-left-radius: 100%;
     background-color: green;
 }
