--- a/style.css
+++ b/style.css
@@ -50,11 +50,10 @@ h1 {
     border-top-left-radius: 100%;
     background-color: green;
     box-shadow: 0px 2px 5px black;
-
 }
 
 .flash {
     border-color: white;
-    
+    box-shadow: 0 0 20px whitesmoke;
 }
 
