--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ h1 {
     box-shadow: 0 0 20px whitesmoke;
 }
 
+p {
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-family: cursive;
+}
